--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,7 @@ jobs:
       - uses: purcell/setup-emacs@master
         with:
           version: "29.1"
-      - run: ./test.sh
+      - name: Install aspell
+        run: sudo apt-get install aspell
+      - name: Run test
+        run: ./test.sh
